# RM2019_TGeek

./: README.md
roborts_bringup/: CMakeLists.txt  package.xml
roborts_bringup/launch/: robot1.launch  robot7.launch
roborts_bringup/scripts/udev/: roborts.rules
roborts_camera/: CMakeLists.txt  README.md  package.xml
roborts_camera/config/: mercure.xml
roborts_camera/launch/: mercure.launch
roborts_camera/mercure/: CMakeLists.txt  mercure_driver.cpp  mercure_driver.h
roborts_camera/test/: main.cpp
roborts_msgs/: CMakeLists.txt
roborts_msgs/msg/: InfoFromCar.msg  InfoToCar.msg
roborts_serial/: CMakeLists.txt  README.md  package.xml
roborts_serial/launch/: serial.launch
roborts_serial/sdk/: serial_device.cpp  serial_device.h
roborts_serial/serial/: serial_node.cpp  serial_node.h
roborts_vision/: CMakeLists.txt  README.md  package.xml
roborts_vision/GXnode/: vision_node.cpp  vision_node.h  vision_param.xml
roborts_vision/camera/: CMakeLists.txt
roborts_vision/camera/mercure/: mercure_driver.cpp  mercure_driver.h
roborts_vision/camera/stereo/: README.md  Stereo.cpp  Stereo.hpp  main.cpp
roborts_vision/camera/stereo/more/: Matching.hpp  SAD.hpp  StereoMatch.hpp  note.md
roborts_vision/camera/uvc/: RMVideoCapture.cpp  RMVideoCapture.hpp  uvc.xml
roborts_vision/detect_factory/: CMakeLists.txt  pnp_solver.h
roborts_vision/detect_factory/armor/: constraint_set.cpp  constraint_set.h  constraint_set.xml  cv_toolbox.h
roborts_vision/detect_factory/box/: BoxDetector.cpp  BoxDetector.h  main.cpp
roborts_vision/detect_factory/qrcode/: detectQR.hpp  task.h  task1.cc  task2.cc
roborts_vision/detect_factory/qrcode/lib/: libzbar.so.0.2.0
roborts_vision/detect_factory/rune/: RuneDetector.cpp  RuneDetector.h  Rune_fiall.cpp  Rune_fiall.h
roborts_vision/detect_factory/tags/: apriltags_detection.cpp
roborts_vision/detect_factory/tags/src/: TagFamily.cc
roborts_vision/executor/: CMakeLists.txt
roborts_vision/executor/chassis/: chassis.cpp
roborts_vision/executor/gimbal/: gimbal.xml  gimbal_control.cpp  gimbal_control.h
roborts_vision/node/: vision_node.cpp
