<package>
    <name>roborts_camera</name>
    <version>1.0.0</version>
    <description>
        The roborts camera package provides mercure camera driver for RoboMaster Robot
    </description>
    <author>skystarry</author>
    <maintainer email="lichunpeng2200@outlook.com">skystarry</maintainer>
    <license>MIT</license>
    <url>123</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>

</package>
