<package>
    <name>roborts_vision</name>
    <version>1.0.0</version>
    <description>
        The roborts camera package provides camera interface for RoboMaster AI Robot
    </description>
    <author>RoboMaster</author>
    <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
    <license>GPL 3.0 </license>
    <url>https://github.com/RoboMaster/RoboRTS</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>roborts_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <build_depend>roborts_msgs</build_depend>

</package>
